<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.task.noteapp.editnote.EditNoteViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_orange_scaled"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/SAVE"
            android:background="@drawable/button_background"
            tools:text="SAVE"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <EditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:hint="@string/notes_title"
            android:background="@drawable/background_details"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:text="@={viewModel.title}"
            app:layout_constraintTop_toBottomOf="@id/bt_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <ImageView
            android:id="@+id/iv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_web"
            app:layout_constraintTop_toTopOf="@+id/et_image_url"
            app:layout_constraintBottom_toBottomOf="@+id/et_image_url"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/et_image_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:hint="@string/notes_url"
            android:background="@drawable/background_details"
            android:inputType="textUri"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:text="@={viewModel.imageUrlLD}"
            app:layout_constraintTop_toBottomOf="@id/et_note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_url"
            />

        <EditText
            android:id="@+id/noteDetails"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/background_details"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/notes_desc"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textSize="14sp"
            android:text="@={viewModel.desc}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_image_url" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>