<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.task.noteapp.main.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_red_scaled">

        <TextView
            android:id="@+id/tv_no_data"
            android:elevation="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/NO_DATA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="parent">

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rv_recycler"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginHorizontal="5dp"
               android:layout_marginBottom="10dp"
               app:layout_constraintTop_toTopOf="parent"
               tools:listitem="@layout/note_list_item" />
       </LinearLayout>

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_add_circle_outline_65"
            app:layout_constraintBottom_toTopOf="@+id/error_view"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/red_opacity_80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/NAVIGATE_TO_ADD"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="@string/NAVIGATE_TO_ADD"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_retry"
                />
            <TextView
                android:id="@+id/tv_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RETRY"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                tools:text="@string/RETRY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/circle_progress"
                />
            <com.task.noteapp.customui.CircleProgressBar
                android:id="@+id/circle_progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_retry"
                app:layout_constraintStart_toStartOf="@+id/tv_retry"
                app:layout_constraintTop_toBottomOf="@+id/tv_retry"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>